# cargo-ptest

./: Cargo.toml  LICENSE  README.md
src/: config.rs  display.rs  lib.rs  logger.rs  main.rs  parse.rs  run.rs
src/tests/: tests.rs  tests2.rs
tests/: integration_test.rs
tests/integration/src/: lib.rs
tests/integration/tests/: testing.rs
