[package]
name = "cargo-ptest"
version = "1.1.4"
edition = "2024"
authors = ["ogwen123 <owen.d.jones@btinternet.com>"]
description = "If installed using cargo install it acts as a command line tool, if used as a package provides methods for running and parsing the output of cargo test."
repository = "https://github.com/Ogwen123/cargo-ptest"
exclude = [".*", "tests/"]
license = "MIT"

[dependencies]
regex = "1.11.2"

[workspace]
members = ["./tests/integration/"]